# vish

./: .ghci  .stylish-haskell.yaml  LICENSE  README.md  TestGame.hs  vish.cabal
data/: App.yaml  Game.yaml  Vish.yaml
data/config/: Window.yml
data/pics/colorspace/: testRGB32.tif  testYF.tif
data/skin/: default.atlas
src/: Vish.hs
src/GXK/: AppConfig.hs  Graphics.hs  Input.hs  Util.hs  Window.hs
src/GXK/Data/: App.hs  Input.hs  Screen.hs  Window.hs
src/GXK/Data/IORef/: Lens.hs
src/GXK/Internal/: App.hs  Backend.hs  Input.hs  Window.hs
src/GXK/Internal/Backend/: GLFW.hs
src/GXK/Internal/Data/: Input.hs
src/Vish/: Config.hs  Game.hs  GameConfig.hs  Graphics.hs  Interpreter.hs  Layout.hs  MessageBox.hs  MessageBoxSkin.hs  Resource.hs  Script.hs  Stage.hs  Util.hs
src/Vish/Application/: App.hs  AppConfig.hs  Backend.hs  Graphics.hs  Input.hs  Window.hs
src/Vish/Application/Backend/: GLFW.hs  GLUT.hs  Types.hs
src/Vish/Application/Data/: App.hs  AppConfig.hs  Input.hs  InputPrims.hs  Window.hs
src/Vish/Application/Data/IORef/: Lens.hs
src/Vish/Application/Internal/: App.hs
src/Vish/Application/Internal/Backend/: GLUT.hs  Types.hs
src/Vish/Backend/: App.hs  Application.hs  GLFW.hs  GLUT.hs  Types.hs
src/Vish/Backend/Data/: App.hs
src/Vish/Data/: App.hs  Config.hs  Game.hs  GameConfig.hs  Interpreter.hs  MessageBox.hs  MessageBoxSkin.hs  Object.hs  Resource.hs  Script.hs  Stage.hs
src/Vish/Graphics/: Font.hs  Image.hs  ImageAtlas.hs  Picture.hs  Texture.hs  TextureAtlas.hs  Util.hs
src/Vish/Graphics/Data/: Color.hs  Font.hs  Image.hs  ImageAtlas.hs  Picture.hs  Texture.hs  TextureAtlas.hs
src/Vish/Math/: Vector.hs
src/Vish/Math/Data/: Rectangle.hs  Vector.hs
src/Vish/Renderer/: Picture.hs  Texture.hs  Util.hs
src/Vish/Renderer/Data/: Picture.hs  Texture.hs
src/Vish/UI/: Scene.hs
test/: TestGame.hs
