name: vish
version: 0.1.0.0
cabal-version: >=1.22.4.0
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyight (C) 2015 Gabriel Anderson
maintainer: ganderson@go.shoreline.edu
category: game
author: Gabriel Anderson
data-dir: data

source-repository head
    type: git
    location: https://www.github.com:andgate/vish.git

library
    exposed-modules:
        Vish
        Vish.Config
        Vish.Data.Config
        Vish.Data.Interpreter
        Vish.Data.MessageBox
        Vish.Data.MessageBoxSkin
        Vish.Data.Object
        Vish.Data.Resource
        Vish.Data.Script
        Vish.Data.Stage
        Vish.Graphics
        Vish.Graphics.Data.Color
        Vish.Graphics.Data.Font
        Vish.Graphics.Data.Image
        Vish.Graphics.Data.Texture
        Vish.Graphics.Data.TextureAtlas
        Vish.Graphics.Font
        Vish.Graphics.Image
        Vish.Graphics.Texture
        Vish.Graphics.TextureAtlas
        Vish.Graphics.Util
        Vish.Interpreter
        Vish.Layout
        Vish.MessageBox
        Vish.MessageBoxSkin
        Vish.Resource
        Vish.Script
        Vish.Stage
    build-depends:
        attoparsec >=0.1 && <0.14,
        base <5,
        containers ==0.5.*,
        directory ==1.2.*,
        filepath ==1.4.*,
        FontyFruity >=0.5.2 && <0.6,
        free >=4 && <4.13,
        GXK <0.2,
        hashtables >=1.1 && <1.3,
        JuicyPixels >=3 && <3.3,
        ListZipper >=1.2.0.2 && <1.3,
        lens >=4.0 && <4.13,
        linear >=1.19.1.3 && <1.20,
        OpenGL ==2.12.*,
        Rasterific ==0.6.*,
        regex-tdfa ==1.2.*,
        text ==1.2.*,
        unordered-containers ==0.2.*,
        vector >0.10 && <0.11,
        yaml ==0.8.*
    default-language: Haskell2010
    default-extensions: OverloadedStrings UnicodeSyntax
                        PostfixOperators TupleSections PackageImports RecursiveDo
                        LambdaCase MultiWayIf TemplateHaskell
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs

executable TestGame
    main-is: TestGame.hs
    build-depends:
        base <5,
        vish -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings UnicodeSyntax
                        PostfixOperators TupleSections PackageImports RecursiveDo
                        LambdaCase MultiWayIf TemplateHaskell
    ghc-options: -Wall -fwarn-tabs -fno-warn-unused-binds -fno-warn-unused-do-bind -fno-warn-unused-imports -fno-warn-type-defaults
